--- a/.github/workflows/reject-strange-branch.yaml
+++ b/.github/workflows/reject-strange-branch.yaml
@@ -4,6 +4,8 @@ on:
     branches-ignore:
       - master
 jobs:
+  call-say-hello:
+    uses: ./.github/workflows/say-hello.yaml
   reject-strange-branch-job:
     runs-on: ubuntu-latest
     steps:
